<?xml version="1.0"?>
<package format="3">
  <name>lunar_nav_ros_pkg</name>
  <version>1.0.0</version>
  <description>ROS-compatible lunar habitat navigation prototype</description>
  <maintainer email="you@example.com">Your Team</maintainer>
  <license>MIT</license>
  <exec_depend>python3</exec_depend>
</package>
